2007-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/betaradio.c: Add the missing trailer 'NULL' of g_build_filename.

2007-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/Makefile.am
	src/betaradio.c
	data/betaradio.desktop.in
	data/betaradio-on.png
	data/Makefile.am
	data/radio-off.png
	data/radio-on.png: Modify the tray icon's size and location on disk.

2007-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* configure.ac,
	data/Makefile.am,
	src/betaradio.c: Add new tray icon and make it flash when working.

2007-12-10	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/sitelist.h: Modify site name.
	* data/betaradio-on.png,
	data/betaradio.png: Update new icons.

2007-11-28	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/sitelist.h: Update site list.

2007-11-15	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/channel.c: Add error check to prevent program's crash.

2007-11-11	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/gstplay.c,
	src/channel.c,
	src/betaradio.c: Add error check, and polish source code.

2007-11-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/sitelist.h,
	src/channel.c,
	src/betaradio.c,
	src/channel.h: Add live channel.

2007-11-06	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/channel.c: Change the url of stream source, and release 0.1.1

2007-07-07	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* configure.ac,
	src/eggtrayicon.h,
	src/gstplay.c,
	src/sitelist.h,
	src/channel.c,
	src/gstplay.h,
	src/Makefile.am,
	src/betaradio.c,
	src/eggtrayicon.c,
	src/channel.h,
	COPYING,
	data/betaradio.desktop.in,
	data/Makefile.am,
	data/betaradio.png,
	Makefile.am: betaradio v0.1.0 released