@@ -1,0 +1,6 @@
+#!/bin/sh
+
+aclocal
+autoheader
+automake --add-missing
+autoconf
