@@ -1,3 +1,6 @@
+2007-01-21	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+	* autogen.sh: Add this for its convenience.
+
 2007-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 	* src/betaradio.c: Add the missing trailer 'NULL' of g_build_filename.
 
